...
                  const SizedBox(height: 25),

                  //creer un compte
                  GestureDetector(
                      onTap: widget.onTap,
                      child: const Text(
                        'Créer un compte',
                        style: TextStyle(
                          fontSize: 20.0,
                        ),
                      )),
                ],
              ),
...
